--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
@@ -75,7 +75,7 @@
     <add name="BD_MigracionTPConnection" connectionString="data source=.\SQL_2017E;initial catalog=BD_OCEF_MigracionTP;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_RepositorioConnection" connectionString="data source=.\SQL_2017E;initial catalog=BD_UNFV_Repositorio;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_TemporalPagoConnection" connectionString="data source=.\SQL_2017E;initial catalog=BD_OCEF_TemporalPagos;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
-    <add name="BD_TemporalTasasConnection" connectionString="data source=.\SQL_2017E;initial catalog=BD_OCEF_TemporalTasas;user id=UserOCEF;password=abc@123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <add name="BD_TemporalTasasConnection" connectionString="data source=.\SQL_2017E;initial catalog=BD_OCEF_TemporalTasas;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
