--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -192,16 +192,16 @@
     <Compile Include="Models\Repository\CtasPorCobrar\ProcesoRepositoty.cs" />
     <Compile Include="Models\Repository\Migracion\Cross\AlumnoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Cross\ConceptoPagoRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Cross\ControlRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Cross\CuotaPagoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Cross\ObligacionRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\Cross\PagoObligacionRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Cross\ProcedenciaRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Cross\UsuarioRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Obligaciones\ConceptoPagoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Obligaciones\OblCabRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Obligaciones\OblDetRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\Obligaciones\PagoObligacionRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Obligaciones\ObligacionRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Obligaciones\OblPagoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Tasas\ConceptoPagoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Configuracion.cs" />
     <Compile Include="Models\Repository\Migracion\Obligaciones\CuotaPagoRepository.cs" />
@@ -235,14 +235,12 @@
     <Compile Include="Models\Services\Migracion\Cross\AlumnoService.cs" />
     <Compile Include="Models\Services\Migracion\Cross\ConceptoPagoService.cs" />
     <Compile Include="Models\Services\Migracion\Cross\CuotaPagoService.cs" />
-    <Compile Include="Models\Services\Migracion\DetalleObservacionService.cs" />
     <Compile Include="Models\Services\Migracion\Obligaciones\ConceptoPagoService.cs" />
     <Compile Include="Models\Services\Migracion\Obligaciones\CuotaPagoService.cs" />
     <Compile Include="Models\Services\Migracion\Obligaciones\OblCabService.cs" />
     <Compile Include="Models\Services\Migracion\Obligaciones\OblDetService.cs" />
     <Compile Include="Models\Services\Migracion\Obligaciones\ObligacionService.cs" />
     <Compile Include="Models\Services\Migracion\Obligaciones\OblPagoService.cs" />
-    <Compile Include="Models\Services\Migracion\Obligaciones\PagoOblService.cs" />
     <Compile Include="Models\Services\Migracion\Tasas\ConceptoPagoService.cs" />
     <Compile Include="Models\Services\Migracion\Tasas\CuotaPagoService.cs" />
     <Compile Include="Models\Services\Migracion\Cross\ObligacionService.cs" />
